--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "No, Yes, Maybe?"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "click>=8.1.8",
     "pyperclip>=1.9.0",
-    "rich>=14.0.0",
     "textual>=3.1.0",
 ]
 
